--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "devDependencies": {
+    "browser-sync": "^2.7.1",
     "gulp": "^3.8.11",
-    "gulp-connect": "^2.2.0",
+    "gulp-clean": "^0.3.1",
+    "gulp-if": "^1.2.5",
+    "gulp-minify-css": "^1.1.1",
+    "gulp-size": "^1.2.1",
+    "gulp-uglify": "^1.2.0",
+    "gulp-useref": "^1.1.2",
     "opn": "^1.0.2"
   }
 }
